# LAC_final

./: .gitignore  README.md  make_turb_htc_files.py  our_functions.py  postprocess_hawc2.py  postprocess_hawc2.sh  postprocess_hawc2_2.py  postprocess_hawc2_2.sh  run.sh  run_bd.sh  run_control.sh  run_design_loads.sh  to_run_bd.txt  to_run_control.txt  to_run_design_loads.txt
assignment_01/: Our_values.py  aero_design_functions.py  aero_dofs_flex  assignment1_01.ipynb  assignment1_02.ipynb  assignment1_02_boguzs.ipynb  assignment1_03.ipynb  assignment1_04.py  assignment1_04_old.py  assugnment1_01.ipynb  example_1MW.py  example_1MW_modified.py
assignment_02/: aero_dofs_new  aero_dofs_new_amp.amp  assignment_2_02.ipynb
assignment_03/: Assignment_3.ipynb  Assignment_3_part_01.ipynb  Assignment_3_part_03.ipynb  our_values.py  test.py
assignment_04/: AEP_Calculation.py  Assignment_3.ipynb  Assignment_4.ipynb  Assignment_4_bogusz.ipynb  Assignment_final.ipynb  Group1_steady_state.csv  our_functions.py  our_values.py  plot_steady.py
assignment_05/: 01_blade_design.ipynb  02_modal_analysis.ipynb  03_control.ipynb  04_assignment.ipynb  04_design_load.ipynb  04_design_load_v2.ipynb  Assignment_4.ipynb  Group1_redesign.htc  assignment1_04.py  assignment_2_01.ipynb  assignment_2_02.ipynb  blade_design.ipynb  our_functions.py  our_values.py
assignment_05_increased_omega/: 01_blade_design.ipynb  our_functions.py  our_values.py
assignment_2/: assignment_2.ipynb  assignment_2_01.ipynb  assignment_2_02.ipynb  (+1 more)
src/: pyproject.toml
src/myteampack/: __init__.py
(+3839 files in other folders)
