# A pyproject.toml to install your team's package
# Many pyproject.toml options here: https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

# Information on the package. Update the authors!
[project]
name = "myteampack"
description = "The team's package for the LAC course"
version = "0.0.1"
authors = [
    { name = "Jenni Rinker", email = "rink@dtu.dk" },
    { name = "I. M. Cool", email = "noreally@trustme.com" }
]
dependencies = [
    "lacbox"
]

# How to build the package. You should not need to modify this.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

